wcserver/cpp/include/wcserver.h

///////////////////////////////////////////////////////////////////////////
//! The following functions access the security data in the Wildcat server.
//! Each 'securable' object (conference, file area, door, etc) has a unique
//! Object Id stored with it.  Access profiles are tables of Object Ids and
//! access flags. When a user logs in, a composite access table consisting
//! of the logical OR of all the flags in the user' access profiles is
//! created.  These functions access the information in that composite
//! array.
//!
//! Object flags are often simply zero or one to indicate no access or allow
//! access, but the individual bits may mean different things such as
//! Join/Read/Write/Sysop access in a conference area.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetObjectFlags(DWORD objectid);
BOOL  APIENTRY GetMultipleObjectFlags(const DWORD *objectid, DWORD count, DWORD *flags);
BOOL  APIENTRY GetObjectById(DWORD objectid, TObjectName &objectname);
BOOL  APIENTRY GetMultipleObjectsById(const DWORD *objectid, DWORD count, TObjectName *objectname);
BOOL  APIENTRY GetObjectByName(DWORD classid, const char *name, TObjectName &objectname, DWORD &tid);
BOOL  APIENTRY GetNextObjectByName(TObjectName &objectname, DWORD &tid);
DWORD APIENTRY GetStringObjectId(DWORD objectclass, const char *name);
DWORD APIENTRY GetStringObjectFlags(DWORD objectclass, const char *name);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of security profiles in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetSecurityProfileCount();
BOOL  APIENTRY GetSecurityProfileNames(DWORD count, char names[][SIZE_SECURITY_NAME]);
BOOL  APIENTRY GetSecurityProfileByIndex(DWORD index, TSecurityProfile &profile);
BOOL  APIENTRY GetSecurityProfileByName(const char *name, TSecurityProfile &profile);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of access profile names in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetAccessProfileCount();
BOOL  APIENTRY GetAccessProfileNames(DWORD count, char names[][SIZE_SECURITY_NAME]);
BOOL  APIENTRY GetAccessProfileName(DWORD index, char name[SIZE_SECURITY_NAME]);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of conferences (message areas) in
//! the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetConferenceCount();
BOOL  APIENTRY GetConfDesc(DWORD conference, TConfDesc &cd);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of conference groups in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetConferenceGroupCount();
BOOL  APIENTRY GetConferenceGroup(DWORD index, TConferenceGroup &cg);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of file areas in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetFileAreaCount();
BOOL  APIENTRY GetFileArea(DWORD area, TFileArea &fa);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of file groups in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetFileGroupCount();
BOOL  APIENTRY GetFileGroup(DWORD index, TFileGroup &fg);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of doors in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetDoorCount();
BOOL  APIENTRY GetDoor(DWORD index, TDoorInfo &di);
///////////////////////////////////////////////////////////////////////////
//! These functions access the list of languages in the server.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetLanguageCount();
BOOL  APIENTRY GetLanguage(DWORD index, TLanguageInfo &li);
///////////////////////////////////////////////////////////////////////////
//! This function gets a specific modem profile from the server.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetModemProfile(const char *name, TModemProfile &mp);
///////////////////////////////////////////////////////////////////////////
//! Get the current maximum number of nodes that have been allocated.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetNodeCount();
///////////////////////////////////////////////////////////////////////////
//! Get the maximum number of concurrent users supported by this
//! installation of Wildcat.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetMaximumUserCount();
///////////////////////////////////////////////////////////////////////////
//! Get a node configuration record for the specified node.  Use
//! by Wconline to start modem nodes.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetNodeConfig(DWORD node, TNodeConfig &nc);
///////////////////////////////////////////////////////////////////////////
//! Get a node information record for a specific node.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetNodeInfo(DWORD node, TwcNodeInfo &ni);
///////////////////////////////////////////////////////////////////////////
//! Get a node information record for a specific connection Id.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetNodeInfoByConnectionId(DWORD id, TwcNodeInfo &ni);
///////////////////////////////////////////////////////////////////////////
//! Get a node information record for a specific name.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetNodeInfoByName(const char *name, TwcNodeInfo &ni);
///////////////////////////////////////////////////////////////////////////
//! Get multiple node information records starting at a specific node.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetNodeInfos(DWORD node, DWORD count, TwcNodeInfo *ni);
///////////////////////////////////////////////////////////////////////////
//! Set the current node's information record.  Only non-critical fields are
//! allowed to be changed by this function.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SetNodeInfo(const TwcNodeInfo &ni);
///////////////////////////////////////////////////////////////////////////
//! Set the current activity string for the current node.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SetNodeActivity(const char *activity);
///////////////////////////////////////////////////////////////////////////
//! Server State Functions
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SetServerState(const char *port, DWORD state);
BOOL  APIENTRY GetServerState(DWORD index, TServerState &ss);
BOOL  APIENTRY SetNodeServerState(DWORD node, DWORD state);
///////////////////////////////////////////////////////////////////////////
//! The following functions access the file database in Wildcat.  The
//! functions should be straightforward with the following notes:
//!
//! - GetFileRecByXxx gets a specific record by key.  SearchFileRecByXxx
//!   searches for matching record, or the next record in the database,
//!   based on a key.
//!
//! - FileSearch returns an array of __int64 (64-bit integers).  The high 32
//!   bits indicates the file area of the record, and the low 32 bits
//!   indicates the absolute reference number of the record.
//!   GetFileRecAbsolute gets a specific file record.
//!
//! - Most functions return a TFileRecord which does not contain the long
//!   file description. To retrieve the long file description, use
//!   GetFullFileRec.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY AddFileRec(TFullFileRecord &f);
BOOL  APIENTRY DeleteFileRec(const TFileRecord &f, BOOL disktoo);
BOOL  APIENTRY FileSearch(const char *s, DWORD &n, unsigned __int64 *&p);
BOOL  APIENTRY GetFileRecAbsolute(DWORD ref, TFileRecord &f);
BOOL  APIENTRY GetFileRecByNameArea(const char *name, DWORD area, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetFileRecByAreaName(DWORD area, const char *name, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetFileRecByAreaDate(DWORD area, const FILETIME &t, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetFileRecByUploader(DWORD id, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetFirstFileRec(DWORD keynum, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetFullFileRec(TFileRecord &f, TFullFileRecord &full);
BOOL  APIENTRY GetLastFileRec(DWORD keynum, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetNextFileRec(DWORD keynum, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY GetPrevFileRec(DWORD keynum, TFileRecord &f, DWORD &tid);
DWORD APIENTRY GetTotalFiles();
DWORD APIENTRY GetTotalFilesInArea(DWORD area);
DWORD APIENTRY GetTotalFilesInGroup(DWORD group);
BOOL  APIENTRY IncrementDownloadCount(TFileRecord &f);
BOOL  APIENTRY SearchFileRecByNameArea(const char *name, DWORD area, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY SearchFileRecByAreaName(DWORD area, const char *name, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY SearchFileRecByAreaDate(DWORD area, const FILETIME &t, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY SearchFileRecByDateArea(const FILETIME &t, DWORD area, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY SearchFileRecByUploader(DWORD id, TFileRecord &f, DWORD &tid);
BOOL  APIENTRY UpdateFileRec(TFileRecord &f);
BOOL  APIENTRY UpdateFullFileRec(TFullFileRecord &f);