wcserver/vb/modules/wcserver.bas


Declare Function GetObjectFlags Lib "wcsrv2.dll" (ByVal objectid As Long) As Long
Declare Function GetMultipleObjectFlags Lib "wcsrv2.dll" (objectid As Long, ByVal count As Long, flags As Long) As Boolean
Declare Function GetObjectById Lib "wcvb.dll" Alias "vbGetObjectById" (ByVal objectid As Long, objectname As TObjectName) As Boolean
Declare Function GetMultipleObjectsById Lib "wcvb.dll" Alias "vbGetMultipleObjectsById" (objectid As Long, ByVal count As Long, objectname As TObjectName) As Boolean
Declare Function GetObjectByName Lib "wcvb.dll" Alias "vbGetObjectByName" (ByVal classid As Long, ByVal name As String, objectname As TObjectName, tid As Long) As Boolean
Declare Function GetNextObjectByName Lib "wcvb.dll" Alias "vbGetNextObjectByName" (objectname As TObjectName, tid As Long) As Boolean
Declare Function GetStringObjectId Lib "wcsrv2.dll" (ByVal objectclass As Long, ByVal name As String) As Long
Declare Function GetStringObjectFlags Lib "wcsrv2.dll" (ByVal objectclass As Long, ByVal name As String) As Long

'//! These functions access the list of security profiles in the server.

Declare Function GetSecurityProfileCount Lib "wcsrv2.dll" () As Long
Declare Function GetSecurityProfileNames Lib "wcvb.dll" Alias "vbGetSecurityProfileNames" () As Variant
Declare Function GetSecurityProfileByIndex Lib "wcvb.dll" Alias "vbGetSecurityProfileByIndex" (ByVal index As Long, profile As TSecurityProfile) As Boolean
Declare Function GetSecurityProfileByName Lib "wcvb.dll" Alias "vbGetSecurityProfileByName" (ByVal name As String, profile As TSecurityProfile) As Boolean

'//! These functions access the list of access profile names in the server.

Declare Function GetAccessProfileCount Lib "wcsrv2.dll" () As Long
Declare Function GetAccessProfileNames Lib "wcvb.dll" Alias "vbGetAccessProfileNames" () As Variant
Declare Function GetAccessProfileName Lib "wcvb.dll" Alias "vbGetAccessProfileName" (ByVal index As Long) As String

'//! These functions access the list of conferences (message areas) in
'//! the server.

Declare Function GetConferenceCount Lib "wcsrv2.dll" () As Long
Declare Function GetConfDesc Lib "wcvb.dll" Alias "vbGetConfDesc" (ByVal conference As Long, cd As TConfDesc) As Boolean

'//! These functions access the list of conference groups in the server.

Declare Function GetConferenceGroupCount Lib "wcsrv2.dll" () As Long
Declare Function GetConferenceGroup Lib "wcvb.dll" Alias "vbGetConferenceGroup" (ByVal index As Long, cg As TConferenceGroup) As Boolean

'//! These functions access the list of file areas in the server.

Declare Function GetFileAreaCount Lib "wcsrv2.dll" () As Long
Declare Function GetFileArea Lib "wcvb.dll" Alias "vbGetFileArea" (ByVal area As Long, fa As TFileArea) As Boolean

'//! These functions access the list of file groups in the server.

Declare Function GetFileGroupCount Lib "wcsrv2.dll" () As Long
Declare Function GetFileGroup Lib "wcvb.dll" Alias "vbGetFileGroup" (ByVal index As Long, fg As TFileGroup) As Boolean

'//! These functions access the list of doors in the server.

Declare Function GetDoorCount Lib "wcsrv2.dll" () As Long
Declare Function GetDoor Lib "wcvb.dll" Alias "vbGetDoor" (ByVal index As Long, di As TDoorInfo) As Boolean

'//! These functions access the list of languages in the server.

Declare Function GetLanguageCount Lib "wcsrv2.dll" () As Long
Declare Function GetLanguage Lib "wcvb.dll" Alias "vbGetLanguage" (ByVal index As Long, li As TLanguageInfo) As Boolean

'//! This function gets a specific modem profile from the server.

Declare Function GetModemProfile Lib "wcvb.dll" Alias "vbGetModemProfile" (ByVal name As String, mp As TModemProfile) As Boolean

'//! Get the current maximum number of nodes that have been allocated.

Declare Function GetNodeCount Lib "wcsrv2.dll" () As Long

'//! Get the maximum number of concurrent users supported by this
'//! installation of Wildcat.

Declare Function GetMaximumUserCount Lib "wcsrv2.dll" () As Long

'//! Get a node configuration record for the specified node.  Use
'//! by Wconline to start modem nodes.

Declare Function GetNodeConfig Lib "wcvb.dll" Alias "vbGetNodeConfig" (ByVal node As Long, nc As TNodeConfig) As Boolean

'//! Get a node information record for a specific node.

Declare Function GetNodeInfo Lib "wcvb.dll" Alias "vbGetNodeInfo" (ByVal node As Long, ni As TwcNodeInfo) As Boolean

'//! Get a node information record for a specific connection Id.

Declare Function GetNodeInfoByConnectionId Lib "wcvb.dll" Alias "vbGetNodeInfoByConnectionId" (ByVal id As Long, ni As TwcNodeInfo) As Boolean

'//! Get a node information record for a specific name.

Declare Function GetNodeInfoByName Lib "wcvb.dll" Alias "vbGetNodeInfoByName" (ByVal name As String, ni As TwcNodeInfo) As Boolean

'//! Get multiple node information records starting at a specific node.

Declare Function GetNodeInfos Lib "wcvb.dll" Alias "vbGetNodeInfos" (ByVal node As Long, ByVal count As Long, ni As TwcNodeInfo) As Boolean

'//! Set the current node's information record.  Only non-critical fields are
'//! allowed to be changed by this function.

Declare Function SetNodeInfo Lib "wcvb.dll" Alias "vbSetNodeInfo" (ni As TwcNodeInfo) As Boolean

'//! Set the current activity string for the current node.

Declare Function SetNodeActivity Lib "wcsrv2.dll" (ByVal activity As String) As Boolean

'//! Server State Functions

Declare Function SetServerState Lib "wcsrv2.dll" (ByVal port As String, ByVal state As Long) As Boolean
Declare Function GetServerState Lib "wcvb.dll" Alias "vbGetServerState" (ByVal index As Long, ss As TServerState) As Boolean
Declare Function SetNodeServerState Lib "wcsrv2.dll" (ByVal node As Long, ByVal state As Long) As Boolean

'//! The following functions access the file database in Wildcat.  The
'//! functions should be straightforward with the following notes:
'//!
'//! - GetFileRecByXxx gets a specific record by key.  SearchFileRecByXxx
'//!   searches for matching record, or the next record in the database,
'//!   based on a key.
'//!
'//! - FileSearch returns an array of __int64 (64-bit integers).  The high 32
'//!   bits indicates the file area of the record, and the low 32 bits
'//!   indicates the absolute reference number of the record.
'//!   GetFileRecAbsolute gets a specific file record.
'//!
'//! - Most functions return a TFileRecord which does not contain the long
'//!   file description. To retrieve the long file description, use
'//!   GetFullFileRec.

Declare Function AddFileRec Lib "wcvb.dll" Alias "vbAddFileRec" (f As TFullFileRecord) As Boolean
Declare Function DeleteFileRec Lib "wcvb.dll" Alias "vbDeleteFileRec" (f As TFileRecord, ByVal disktoo As Long) As Boolean
Declare Function FileSearch Lib "wcvb.dll" Alias "vbFileSearch" (byval s As String) As Variant
Declare Function GetFileRecAbsolute Lib "wcvb.dll" Alias "vbGetFileRecAbsolute" (ByVal ref As Long, f As TFileRecord) As Boolean
Declare Function GetFileRecByNameArea Lib "wcvb.dll" Alias "vbGetFileRecByNameArea" (ByVal name As String, ByVal area As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetFileRecByAreaName Lib "wcvb.dll" Alias "vbGetFileRecByAreaName" (ByVal area As Long, ByVal name As String, f As TFileRecord, tid As Long) As Boolean
Declare Function GetFileRecByAreaDate Lib "wcvb.dll" Alias "vbGetFileRecByAreaDate" (ByVal area As Long, t As FILETIME, f As TFileRecord, tid As Long) As Boolean
Declare Function GetFileRecByUploader Lib "wcvb.dll" Alias "vbGetFileRecByUploader" (ByVal id As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetFirstFileRec Lib "wcvb.dll" Alias "vbGetFirstFileRec" (ByVal keynum As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetFullFileRec Lib "wcvb.dll" Alias "vbGetFullFileRec" (f As TFileRecord, full As TFullFileRecord) As Boolean
Declare Function GetLastFileRec Lib "wcvb.dll" Alias "vbGetLastFileRec" (ByVal keynum As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetNextFileRec Lib "wcvb.dll" Alias "vbGetNextFileRec" (ByVal keynum As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetPrevFileRec Lib "wcvb.dll" Alias "vbGetPrevFileRec" (ByVal keynum As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function GetTotalFiles Lib "wcsrv2.dll" () As Long
Declare Function GetTotalFilesInArea Lib "wcsrv2.dll" (ByVal area As Long) As Long
Declare Function GetTotalFilesInGroup Lib "wcsrv2.dll" (ByVal group As Long) As Long
Declare Function IncrementDownloadCount Lib "wcvb.dll" Alias "vbIncrementDownloadCount" (f As TFileRecord) As Boolean
Declare Function SearchFileRecByNameArea Lib "wcvb.dll" Alias "vbSearchFileRecByNameArea" (ByVal name As String, ByVal area As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function SearchFileRecByAreaName Lib "wcvb.dll" Alias "vbSearchFileRecByAreaName" (ByVal area As Long, ByVal name As String, f As TFileRecord, tid As Long) As Boolean
Declare Function SearchFileRecByAreaDate Lib "wcvb.dll" Alias "vbSearchFileRecByAreaDate" (ByVal area As Long, t As FILETIME, f As TFileRecord, tid As Long) As Boolean
Declare Function SearchFileRecByDateArea Lib "wcvb.dll" Alias "vbSearchFileRecByDateArea" (t As FILETIME, ByVal area As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function SearchFileRecByUploader Lib "wcvb.dll" Alias "vbSearchFileRecByUploader" (ByVal id As Long, f As TFileRecord, tid As Long) As Boolean
Declare Function UpdateFileRec Lib "wcvb.dll" Alias "vbUpdateFileRec" (f As TFileRecord) As Boolean
Declare Function UpdateFullFileRec Lib "wcvb.dll" Alias "vbUpdateFullFileRec" (f As TFullFileRecord) As Boolean

'//! The following functions access the message databases in Wildcat.
'//! Messages are identified by there conference number and Id.  Message Ids
'//! are assigned when the message is added to the database and never
'//! reassigned.  Message Ids are very large numbers, so a separate message
'//! 'Number' is provided for convenience.  Message numbers are assigned
'//! sequentially within a conference.
